fix --> fav card container overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -61,12 +61,14 @@ HTML {
     --zIndexLangMenuModal: 25;
     --zIndexOptionList: 5;
     /*¿GENERAL START */
+    --fontSize: 10px;
     --imgContainerHeight: 40rem;
     --navHeight: 6rem;
     --itemSize: 8rem;
+    --pokeBgWidth: 25rem;
+    --favCardWidth: 15rem;
     width: 100%;
     height: 100vh;
-    --fontSize: 10px;
     font-size: var(--fontSize);
     font-family: "Lato", sans-serif;
     font-weight: 300;
@@ -720,8 +722,6 @@ NAV {
     align-items: flex-start;
     gap: 0.5rem;
     height: fit-content;
-    /* padding: 2rem; */
-    max-height: calc(100vh - 16rem);
     overflow-y: auto;
 }
 .section_subtitle_data {
@@ -758,7 +758,7 @@ NAV {
 .fav_card {
     position: relative;
     height: fit-content;
-    width: 100%;
+    width: var(--favCardWidth);
     justify-content: space-between;
 }
 .theme_card {
@@ -1078,7 +1078,7 @@ MAIN {
 .poke_bg {
     position: relative;
     width: 100%;
-    height: 25rem;
+    height: var(--pokeBgWidth);
     transition: var(--transitionM);
     background: linear-gradient(45deg, tomato, orange, red);
     background-position: center !important;
@@ -1431,7 +1431,6 @@ fieldset {
 #fav_modal .option_list_btns_container {
     overflow-y: auto;
 }
-
 #alert_modal_fav {
     width: fit-content;
     padding: 1rem 2rem;
@@ -1443,12 +1442,8 @@ fieldset {
 @media screen and (min-width: 440px) {
     HTML {
         --fontSize: 11px;
-    }
-    .poke_bg {
-        height: 32rem;
-    }
-    .fav_card {
-        width: 15rem;
+        --pokeBgWidth: 32rem;
+        --favCardWidth: 16rem;
     }
 }
 @media screen and (min-width: 550px) {
@@ -1462,9 +1457,7 @@ fieldset {
 @media screen and (min-width: 900px) {
     HTML {
         --fontSize: 12px;
-    }
-    .fav_card {
-        width: 18rem;
+        --favCardWidth: 18rem;
     }
     #themes_btns_container {
         max-height: fit-content;
